<resources>
    <string name="app_name">NoteHome</string>
    <string name="description_day_of_week">День недели:</string>
    <string name="add_title">Заголовок заметки</string>
    <string name="add_description">Описание заметки</string>
    <string name="radio_button_add_1">1</string>
    <string name="radio_button_add_2">2</string>
    <string name="radio_button_add_3">3</string>
    <string name="button_add_note">Создать заметку</string>

    <string-array name="day_of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>

    </string-array>
</resources>
